# Quicksort-Parallelization

./: CMakeLists.txt  README.md
PRS projekat/: CMakeLists.txt  PRS projekat.cpp  PRS projekat.h  executionVersions.cpp  helperFunctions.cpp  main.cpp  partitions.cpp  quickSortVersions.cpp
